--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .font-poppins {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .poppins-thin {
@@ -41,15 +40,15 @@
 
 body {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: rgb(var(--foreground-rgb));
   position: relative;
-  background-color: #002FA7;
+  background-color: #002fa7;
 }
 
 body::before {
   content: "";
-  background-image: url('/Interior.png');
+  background-image: url("/Interior.png");
   background-repeat: no-repeat;
   background-size: cover;
   top: 0;
@@ -71,11 +70,16 @@ nav a {
 }
 
 button {
-  transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease, background-color 0.3s ease, transform 0.3s ease;
+}
+
+button:hover {
+  background-color: #f0f0f0;
+  transform: scale(1.05);
 }
 
 .bg-cream {
-  background-color: #FFF4E6;
+  background-color: #fff4e6;
 }
 
 footer p,
@@ -91,27 +95,27 @@ footer .font-bold {
   font-weight: bold;
 }
 
-footer .space-y-2>*+* {
+footer .space-y-2 > * + * {
   margin-top: 0.5rem;
 }
 
-footer .space-y-4>*+* {
+footer .space-y-4 > * + * {
   margin-top: 1rem;
 }
 
-footer .space-y-6>*+* {
+footer .space-y-6 > * + * {
   margin-top: 1.5rem;
 }
 
 @media (min-width: 768px) {
   body::before {
-    background-image: url('/Interior.png');
+    background-image: url("/Interior.png");
   }
 }
 
 @media (min-width: 1024px) {
   body::before {
-    background-image: url('/Interior2.png');
+    background-image: url("/Interior2.png");
   }
 }
 
@@ -119,4 +123,22 @@ footer .space-y-6>*+* {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.modal {
+  animation: fadeIn 0.5s;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.menu-button:hover {
+  color: #3cc8a3;
 }
